# cpp_core

./: CMakeLists.txt  README.md  biicode.conf  conanfile.txt  point.h  rect.h
src/: displayer.h  platform_config.h  point.h  rect.h
